# adv-gestures

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  gestures.py  pyproject.toml
docs/: playground-prd.md  playground-quickstart.md
src/adv_gestures/: __init__.py  cameras.py  cli.py  config.py  drawing.py  gestures.py  mediapipe.py  recognizer.py  smoothing.py
src/adv_gestures/cli/: __init__.py  check_camera.py  common.py  depth_viz.py  options.py  run.py  tweak.py
src/adv_gestures/cli/playground/: __init__.py  server.py
src/adv_gestures/cli/playground/static/: application-manager.js  drawing-primitives.js  index.html  main.js  styles.css
src/adv_gestures/cli/playground/static/apps/: 3d_viewer.js  _base.js  debug.js  default.js  drawing.js  pong.js  theremin.js
src/adv_gestures/models/: __init__.py  fingers.py  gestures.py  hands.py  landmarks.py  utils.py
src/adv_gestures/models/hands/: __init__.py  base_gestures.py  hand.py  hand_gestures.py  hands.py  hands_gestures.py  palm.py  utils.py
