[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adv-gestures"
version = "0.1.0"
description = "Real-time hand gesture recognition using MediaPipe and OpenCV"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = 'Stephane "Twidi" Angel', email = "s.angel@twidi.com"},
]
keywords = ["gesture-recognition", "mediapipe", "opencv", "hand-tracking", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "typer>=0.9.0",
    "linuxpy>=0.10.0",
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "typing-extensions>=4.8.0",
    "textual>=0.86.0",
]

[project.optional-dependencies]
dev = [
    'mypy',
    'mypy-extensions',
    'black',
    'isort',
    'ruff',
]

[project.scripts]
adv-gestures = "adv_gestures.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 118
target-version = ["py311"]


[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.per-file-ignores = {"src/adv_gestures/cli.py" = ["B008"]}

[tool.mypy]
python_version = "3.11"
plugins = ['pydantic.mypy']
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
local_partial_types = true
strict_equality = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
strict = true
implicit_reexport = true
disallow_subclassing_any = false
disallow_untyped_defs = true
